Adjustment to use with IDF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,295 @@ message(INFO "<MS>")
 message(INFO "<MS> CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
 
 
-set(ArduinoBearSSL_SRCS src/ArduinoBearSSL.cpp)
+set(ArduinoBearSSL_SRCS 
+
+    src/bearssl/aes_big_cbcdec.c
+    src/bearssl/aes_big_cbcenc.c
+    src/bearssl/aes_big_ctr.c
+    src/bearssl/aes_big_ctrcbc.c
+    src/bearssl/aes_big_dec.c
+    src/bearssl/aes_big_enc.c
+    src/bearssl/aes_common.c
+    src/bearssl/aes_ct.c
+    src/bearssl/aes_ct_cbcdec.c
+    src/bearssl/aes_ct_cbcenc.c
+    src/bearssl/aes_ct_ctr.c
+    src/bearssl/aes_ct_ctrcbc.c
+    src/bearssl/aes_ct_dec.c
+    src/bearssl/aes_ct_enc.c
+    src/bearssl/aes_ct64.c
+    src/bearssl/aes_ct64_cbcdec.c
+    src/bearssl/aes_ct64_cbcenc.c
+    src/bearssl/aes_ct64_ctr.c
+    src/bearssl/aes_ct64_ctrcbc.c
+    src/bearssl/aes_ct64_dec.c
+    src/bearssl/aes_ct64_enc.c
+    src/bearssl/aes_pwr8.c
+    src/bearssl/aes_pwr8_cbcdec.c
+    src/bearssl/aes_pwr8_cbcenc.c
+    src/bearssl/aes_pwr8_ctr.c
+    src/bearssl/aes_pwr8_ctrcbc.c
+    src/bearssl/aes_small_cbcdec.c
+    src/bearssl/aes_small_cbcenc.c
+    src/bearssl/aes_small_ctr.c
+    src/bearssl/aes_small_ctrcbc.c
+    src/bearssl/aes_small_dec.c
+    src/bearssl/aes_small_enc.c
+    src/bearssl/aes_x86ni.c
+    src/bearssl/aes_x86ni_cbcdec.c
+    src/bearssl/aes_x86ni_cbcenc.c
+    src/bearssl/aes_x86ni_ctr.c
+    src/bearssl/aesctr_drbg.c
+    src/bearssl/asn1enc.c
+    src/bearssl/ccm.c
+    src/bearssl/ccopy.c
+    src/bearssl/chacha20_ct.c
+    src/bearssl/chacha20_sse2.c
+    src/bearssl/dec16be.c
+    src/bearssl/dec16le.c
+    src/bearssl/dec32be.c
+    src/bearssl/dec32le.c
+    src/bearssl/dec64be.c
+    src/bearssl/dec64le.c
+    src/bearssl/des_ct.c
+    src/bearssl/des_ct_cbcdec.c
+    src/bearssl/des_ct_cbcenc.c
+    src/bearssl/des_support.c
+    src/bearssl/des_tab.c
+    src/bearssl/des_tab_cbcdec.c
+    src/bearssl/des_tab_cbcenc.c
+    src/bearssl/dig_oid.c
+    src/bearssl/dig_size.c
+    src/bearssl/eax.c
+    src/bearssl/ec_all_m15.c
+    src/bearssl/ec_all_m31.c
+    src/bearssl/ec_c25519_i15.c
+    src/bearssl/ec_c25519_i31.c
+    src/bearssl/ec_c25519_m15.c
+    src/bearssl/ec_c25519_m31.c
+    src/bearssl/ec_curve25519.c
+    src/bearssl/ec_default.c
+    src/bearssl/ec_keygen.c
+    src/bearssl/ec_p256_m15.c
+    src/bearssl/ec_p256_m31.c
+    src/bearssl/ec_prime_i15.c
+    src/bearssl/ec_prime_i31.c
+    src/bearssl/ec_pubkey.c
+    src/bearssl/ec_secp256r1.c
+    src/bearssl/ec_secp384r1.c
+    src/bearssl/ec_secp521r1.c
+    src/bearssl/ecdsa_atr.c
+    src/bearssl/ecdsa_default_sign_asn1.c
+    src/bearssl/ecdsa_default_sign_raw.c
+    src/bearssl/ecdsa_default_vrfy_asn1.c
+    src/bearssl/ecdsa_default_vrfy_raw.c
+    src/bearssl/ecdsa_i15_bits.c
+    src/bearssl/ecdsa_i15_sign_asn1.c
+    src/bearssl/ecdsa_i15_sign_raw.c
+    src/bearssl/ecdsa_i15_vrfy_asn1.c
+    src/bearssl/ecdsa_i15_vrfy_raw.c
+    src/bearssl/ecdsa_i31_bits.c
+    src/bearssl/ecdsa_i31_sign_asn1.c
+    src/bearssl/ecdsa_i31_sign_raw.c
+    src/bearssl/ecdsa_i31_vrfy_asn1.c
+    src/bearssl/ecdsa_i31_vrfy_raw.c
+    src/bearssl/ecdsa_rta.c
+    src/bearssl/enc16be.c
+    src/bearssl/enc16le.c
+    src/bearssl/enc32be.c
+    src/bearssl/enc32le.c
+    src/bearssl/enc64be.c
+    src/bearssl/enc64le.c
+    src/bearssl/encode_ec_pk8der.c
+    src/bearssl/encode_ec_rawder.c
+    src/bearssl/encode_rsa_pk8der.c
+    src/bearssl/encode_rsa_rawder.c
+    src/bearssl/gcm.c
+    src/bearssl/ghash_ctmul.c
+    src/bearssl/ghash_ctmul32.c
+    src/bearssl/ghash_ctmul64.c
+    src/bearssl/ghash_pclmul.c
+    src/bearssl/ghash_pwr8.c
+    src/bearssl/hkdf.c
+    src/bearssl/hmac.c
+    src/bearssl/hmac_ct.c
+    src/bearssl/hmac_drbg.c
+    src/bearssl/i15_add.c
+    src/bearssl/i15_bitlen.c
+    src/bearssl/i15_decmod.c
+    src/bearssl/i15_decode.c
+    src/bearssl/i15_decred.c
+    src/bearssl/i15_encode.c
+    src/bearssl/i15_fmont.c
+    src/bearssl/i15_iszero.c
+    src/bearssl/i15_moddiv.c
+    src/bearssl/i15_modpow.c
+    src/bearssl/i15_modpow2.c
+    src/bearssl/i15_montmul.c
+    src/bearssl/i15_mulacc.c
+    src/bearssl/i15_muladd.c
+    src/bearssl/i15_ninv15.c
+    src/bearssl/i15_reduce.c
+    src/bearssl/i15_rshift.c
+    src/bearssl/i15_sub.c
+    src/bearssl/i15_tmont.c
+    src/bearssl/i31_add.c
+    src/bearssl/i31_bitlen.c
+    src/bearssl/i31_decmod.c
+    src/bearssl/i31_decode.c
+    src/bearssl/i31_decred.c
+    src/bearssl/i31_encode.c
+    src/bearssl/i31_fmont.c
+    src/bearssl/i31_iszero.c
+    src/bearssl/i31_moddiv.c
+    src/bearssl/i31_modpow.c
+    src/bearssl/i31_modpow2.c
+    src/bearssl/i31_montmul.c
+    src/bearssl/i31_mulacc.c
+    src/bearssl/i31_muladd.c
+    src/bearssl/i31_ninv31.c
+    src/bearssl/i31_reduce.c
+    src/bearssl/i31_rshift.c
+    src/bearssl/i31_sub.c
+    src/bearssl/i31_tmont.c
+    src/bearssl/i32_add.c
+    src/bearssl/i32_bitlen.c
+    src/bearssl/i32_decmod.c
+    src/bearssl/i32_decode.c
+    src/bearssl/i32_decred.c
+    src/bearssl/i32_div32.c
+    src/bearssl/i32_encode.c
+    src/bearssl/i32_fmont.c
+    src/bearssl/i32_iszero.c
+    src/bearssl/i32_modpow.c
+    src/bearssl/i32_montmul.c
+    src/bearssl/i32_mulacc.c
+    src/bearssl/i32_muladd.c
+    src/bearssl/i32_ninv32.c
+    src/bearssl/i32_reduce.c
+    src/bearssl/i32_sub.c
+    src/bearssl/i32_tmont.c
+    src/bearssl/i62_modpow2.c
+    src/bearssl/md5.c
+    src/bearssl/md5sha1.c
+    src/bearssl/mgf1.c
+    src/bearssl/multihash.c
+    src/bearssl/pemdec.c
+    src/bearssl/pemenc.c
+    src/bearssl/poly1305_ctmul.c
+    src/bearssl/poly1305_ctmul32.c
+    src/bearssl/poly1305_ctmulq.c
+    src/bearssl/poly1305_i15.c
+    src/bearssl/prf.c
+    src/bearssl/prf_md5sha1.c
+    src/bearssl/prf_sha256.c
+    src/bearssl/prf_sha384.c
+    src/bearssl/rsa_default_keygen.c
+    src/bearssl/rsa_default_modulus.c
+    src/bearssl/rsa_default_oaep_decrypt.c
+    src/bearssl/rsa_default_oaep_encrypt.c
+    src/bearssl/rsa_default_pkcs1_sign.c
+    src/bearssl/rsa_default_pkcs1_vrfy.c
+    src/bearssl/rsa_default_priv.c
+    src/bearssl/rsa_default_privexp.c
+    src/bearssl/rsa_default_pub.c
+    src/bearssl/rsa_default_pubexp.c
+    src/bearssl/rsa_i15_keygen.c
+    src/bearssl/rsa_i15_modulus.c
+    src/bearssl/rsa_i15_oaep_decrypt.c
+    src/bearssl/rsa_i15_oaep_encrypt.c
+    src/bearssl/rsa_i15_pkcs1_sign.c
+    src/bearssl/rsa_i15_pkcs1_vrfy.c
+    src/bearssl/rsa_i15_priv.c
+    src/bearssl/rsa_i15_privexp.c
+    src/bearssl/rsa_i15_pub.c
+    src/bearssl/rsa_i15_pubexp.c
+    src/bearssl/rsa_i31_keygen.c
+    src/bearssl/rsa_i31_keygen_inner.c
+    src/bearssl/rsa_i31_modulus.c
+    src/bearssl/rsa_i31_oaep_decrypt.c
+    src/bearssl/rsa_i31_oaep_encrypt.c
+    src/bearssl/rsa_i31_pkcs1_sign.c
+    src/bearssl/rsa_i31_pkcs1_vrfy.c
+    src/bearssl/rsa_i31_priv.c
+    src/bearssl/rsa_i31_privexp.c
+    src/bearssl/rsa_i31_pub.c
+    src/bearssl/rsa_i31_pubexp.c
+    src/bearssl/rsa_i32_oaep_decrypt.c
+    src/bearssl/rsa_i32_oaep_encrypt.c
+    src/bearssl/rsa_i32_pkcs1_sign.c
+    src/bearssl/rsa_i32_pkcs1_vrfy.c
+    src/bearssl/rsa_i32_priv.c
+    src/bearssl/rsa_i32_pub.c
+    src/bearssl/rsa_i62_keygen.c
+    src/bearssl/rsa_i62_oaep_decrypt.c
+    src/bearssl/rsa_i62_oaep_encrypt.c
+    src/bearssl/rsa_i62_pkcs1_sign.c
+    src/bearssl/rsa_i62_pkcs1_vrfy.c
+    src/bearssl/rsa_i62_priv.c
+    src/bearssl/rsa_i62_pub.c
+    src/bearssl/rsa_oaep_pad.c
+    src/bearssl/rsa_oaep_unpad.c
+    src/bearssl/rsa_pkcs1_sig_pad.c
+    src/bearssl/rsa_pkcs1_sig_unpad.c
+    src/bearssl/rsa_ssl_decrypt.c
+    src/bearssl/settings.c
+    src/bearssl/sha1.c
+    src/bearssl/sha2big.c
+    src/bearssl/sha2small.c
+    src/bearssl/skey_decoder.c
+    src/bearssl/ssl_ccert_single_ec.c
+    src/bearssl/ssl_ccert_single_rsa.c
+    src/bearssl/ssl_client.c
+    src/bearssl/ssl_client_default_rsapub.c
+    src/bearssl/ssl_client_full.c
+    src/bearssl/ssl_engine.c
+    src/bearssl/ssl_engine_default_aescbc.c
+    src/bearssl/ssl_engine_default_aesccm.c
+    src/bearssl/ssl_engine_default_aesgcm.c
+    src/bearssl/ssl_engine_default_chapol.c
+    src/bearssl/ssl_engine_default_descbc.c
+    src/bearssl/ssl_engine_default_ec.c
+    src/bearssl/ssl_engine_default_ecdsa.c
+    src/bearssl/ssl_engine_default_rsavrfy.c
+    src/bearssl/ssl_hashes.c
+    src/bearssl/ssl_hs_client.c
+    src/bearssl/ssl_hs_server.c
+    src/bearssl/ssl_io.c
+    src/bearssl/ssl_keyexport.c
+    src/bearssl/ssl_lru.c
+    src/bearssl/ssl_rec_cbc.c
+    src/bearssl/ssl_rec_ccm.c
+    src/bearssl/ssl_rec_chapol.c
+    src/bearssl/ssl_rec_gcm.c
+    src/bearssl/ssl_scert_single_ec.c
+    src/bearssl/ssl_scert_single_rsa.c
+    src/bearssl/ssl_server.c
+    src/bearssl/ssl_server_full_ec.c
+    src/bearssl/ssl_server_full_rsa.c
+    src/bearssl/ssl_server_mine2c.c
+    src/bearssl/ssl_server_mine2g.c
+    src/bearssl/ssl_server_minf2c.c
+    src/bearssl/ssl_server_minf2g.c
+    src/bearssl/ssl_server_minr2g.c
+    src/bearssl/ssl_server_minu2g.c
+    src/bearssl/ssl_server_minv2g.c
+    src/bearssl/sysrng.c
+    src/bearssl/x509_decoder.c
+    src/bearssl/x509_knownkey.c
+    src/bearssl/x509_minimal.c
+    src/bearssl/x509_minimal_full.c    
+
+    src/AES128.cpp
+    src/ArduinoBearSSL.cpp
+    src/BearSSLClient.cpp
+    src/DES.cpp
+    src/Encryption.cpp
+    src/MD5.cpp
+    src/SHA.cpp
+    src/SHA1.cpp
+    src/SHA256.cpp
+    )
 set(ArduinoBearSSL_INCL ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(ArduinoBearSSL_REQU 
     arduino 
